<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/pink"
    android:padding="20dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo1"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stressless_app"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp" />


    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:padding="16dp"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_login"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:inputType="textPassword" />

   <com.google.android.material.button.MaterialButton
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/login_button"
       android:layout_marginBottom="20dp"
       android:textColor="@color/pink"
       style="@style/CustomButtonStyle"
       android:text="@string/login" />


    <TextView
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@android:color/white" />
</LinearLayout>