<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_transparent"
            android:gravity="center">

            <ImageView
                android:id="@+id/banner_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/stressless"
                android:contentDescription="@string/app_logo"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/banner_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banner_image"
                android:layout_centerHorizontal="true"
                android:text="@string/about_us_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/about_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_description"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/team_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_team"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/team_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center" />
        </LinearLayout>

            <Button
                android:id="@+id/contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:backgroundTint="@color/pink"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="70dp"
                android:layout_marginEnd="8dp" />

    </LinearLayout>
</ScrollView>
